# S

./: Push.txt  build.gradle.kts  fix_connect.py  fix_dns.py  fix_scanner.py  fix_singbox_dns2.py  fix_udp.py
.github/workflows/: build.yml
app/: .gitignore  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: cf_cidrs_v4  cf_ip_range_v4
app/src/main/assets/geo/: cn.cidr  cn.domains  ir.cidr  ir.domains  ru.cidr  ru.domains
app/src/main/java/app/slipnet/: SlipNetApp.kt
app/src/main/res/drawable/: widget_bg_disconnected.xml
app/src/main/res/values/: themes.xml
app/src/main/rust/slipstream-rust/: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md
app/src/main/rust/slipstream-rust/crates/slipstream-core/: Cargo.toml
app/src/main/rust/slipstream-rust/crates/slipstream-core/src/: flow_control.rs  invariants.rs  lib.rs  macros.rs  net.rs  sip003.rs  tcp.rs  test_support.rs
app/src/main/rust/slipstream-rust/crates/slipstream-dns/: Cargo.toml
app/src/main/rust/slipstream-rust/crates/slipstream-dns/src/: codec.rs  lib.rs  name.rs  types.rs  wire.rs
app/src/main/rust/slipstream-rust/crates/slipstream-dns/tests/: multi_domain.rs
app/src/main/rust/slipstream-rust/crates/slipstream-ffi/: Cargo.toml  build.rs
app/src/main/rust/slipstream-rust/crates/slipstream-ffi/cc/: picotls_layout.c  slipstream_mixed_cc.c  slipstream_poll.c  slipstream_server_cc.c  slipstream_stateless_packet.c  slipstream_test_helpers.c
app/src/main/rust/slipstream-rust/crates/slipstream-ffi/src/: lib.rs  picoquic.rs  runtime.rs
app/src/main/rust/slipstream-rust/crates/slipstream-ffi/tests/: backpressure.rs  runtime.rs
app/src/main/rust/slipstream-rust/crates/slipstream-server/: Cargo.toml
app/src/main/rust/slipstream-rust/crates/slipstream-server/src/: config.rs  main.rs  server.rs  target.rs  udp_fallback.rs
app/src/main/rust/slipstream-rust/crates/slipstream-server/tests/: cert_pinning_e2e.rs  epipe_reset_e2e.rs  flow_control_e2e.rs  idle_gc_e2e.rs  restart_reconnect_e2e.rs  target_read_error_reset_e2e.rs  udp_fallback_e2e.rs
app/src/main/rust/slipstream-rust/crates/slipstream-server/tests/support/: mod.rs
app/src/main/rust/slipstream-rust/docs/: README.md  benchmarks-results.md  benchmarks.md  build.md  config.md  design.md  dns-codec.md  interop.md  picoquic-changes.md  profiling.md  protocol.md  release.md  sip003.md  usage.md
app/src/main/rust/slipstream-rust/scripts/: README.md  (+2 more)
gradle/: gradle-daemon-jvm.properties
server/: deploy.sh  direct-proxy.go  install-server.sh  slipstream-server-v0.1.0-linux-x86_64
(+92 files in other folders)
